fixed per row height and footer text clipping

--- a/src/operun/frontpage/browser/static/frontpage-compiled.css
+++ b/src/operun/frontpage/browser/static/frontpage-compiled.css
@@ -68,9 +68,6 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 .news-text-wrapper {
   margin: 0 0 0 1px;
 }
-.js-height {
-  height: auto;
-}
 /* Overrides */
 .template-view .formHelp {
   display: none;
@@ -78,5 +75,8 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 #content-core #form-widgets-image img {
   width: 100%;
   height: auto;
+}
+.row {
+  padding: 0 15px 0 15px;
 }
 /*# sourceMappingURL=frontpage-compiled.css.map */
