--- a/src/operun/frontpage/browser/static/frontpage.less
+++ b/src/operun/frontpage/browser/static/frontpage.less
@@ -86,10 +86,6 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
   margin: 0 0 0 1px;
 }
 
-.js-height {
-  height: auto;
-}
-
 /* Overrides */
 
 .template-view .formHelp {
@@ -99,4 +95,8 @@ body#visual-portal-wrapper.pat-plone .outer-wrapper .contenttype-teaser::before 
 #content-core #form-widgets-image img {
   width: 100%;
   height: auto;
+}
+
+.row {
+  padding: 0 15px 0 15px;
 }
